kasa/src/components/Collapse/Collapse.scss
@import "../../assets/variable.scss";

@mixin collapseform {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  overflow: hidden;
  background: $main-color;
  color: white;
  border: none;
  font-weight: 700;
  border-radius: 10px;
}

@mixin mq768 {
  font-size: 13px;
  padding: 7px 15px 7px 15px;
}

@mixin animnopen {
  transform: translatey(-50%);
  display: none;
}
@mixin animclose {
  transform: translatey(-100%);
  height: 0px;
  color: transparent;
  background-color: none;
}
.collapse {
  border-radius: 5px;
  overflow: hidden;
  max-width: 1023px;
  margin: 0px 0 30px 0;
  padding: 0;
  font-family: $main-font;
  width: 100%;
  @media (max-width: 768px) {
    margin: 0px 0 20px 0;
  }

  &_up {
    transform: rotate(0.5turn);
  }
  &_up,
  &_down {
    padding-left: 32px;
    padding-right: 32px;
    transition: transform 150ms;
    &:active {
      transform: rotate(0.5turn);
    }
    img {
      @media (max-width: 768px) {
        width: 15px;
        width: 15px;
      }
    }
  }
  .logement_collapse {
    @include collapseform;
    font-size: 18px;
    padding: 15px 15px 15px 15px;
    &:active + .collapse_open {
      @include animnopen;
    }
    &:active + .collapse_close {
      @include animclose;
    }
    @media (max-width: 768px) {
      @include mq768;
    }
  }

  .Apropos_collapse {
    @include collapseform;
    font-size: 24px;
    padding: 13px 15px 10px 15px;
    &:active + .collapse_open {
      @include animnopen;
    }
    &:active + .collapse_close {
      @include animclose;
    }
    @media (max-width: 768px) {
      @include mq768;
    }
  }

  .collapse_open {
    list-style-type: none;
    padding-bottom: 20px;
    transform: translatey (0%);
    transition: 0.5s;
    opacity: 1;
    background-color: rgb(248, 248, 248);
    & > span {
      display: block;
      padding-top: 20px;
    }
  }
  .collapse_close > span {
    transition: 0.5s;
    display: none;
  }
}

